tests/baselines/reference/subtypesOfTypeParameterWithConstraints.errors.txt
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(19,5): error TS2416: Class member of type 'U' is not assignable to base class member of type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(19,5): error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(50,5): error TS2416: Class member of type 'U' is not assignable to base class member of type 'T'.
  Type 'V' is not assignable to type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(50,5): error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(67,5): error TS2416: Class member of type 'V' is not assignable to base class member of type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(67,5): error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(72,5): error TS2416: Class member of type 'V' is not assignable to base class member of type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(72,5): error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(112,5): error TS2416: Class member of type 'U' is not assignable to base class member of type 'T'.
  Type 'V' is not assignable to type 'T'.
    Type 'Date' is not assignable to type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(112,5): error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(134,5): error TS2416: Class member of type 'V' is not assignable to base class member of type 'T'.
  Type 'Date' is not assignable to type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(134,5): error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(139,5): error TS2416: Class member of type 'V' is not assignable to base class member of type 'U'.
  Type 'Date' is not assignable to type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(139,5): error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(156,5): error TS2416: Class member of type 'Date' is not assignable to base class member of type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(156,5): error TS2411: Property 'foo' of type 'Date' is not assignable to string index type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(161,5): error TS2416: Class member of type 'Date' is not assignable to base class member of type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(161,5): error TS2411: Property 'foo' of type 'Date' is not assignable to string index type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(166,5): error TS2416: Class member of type 'Date' is not assignable to base class member of type 'V'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts(166,5): error TS2411: Property 'foo' of type 'Date' is not assignable to string index type 'V'.


==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints.ts (20 errors) ====
    // checking whether other types are subtypes of type parameters with constraints
    
    class C3<T> {
        foo: T;
    }
    
    class D1<T extends U, U> extends C3<T> {
        [x: string]: T;
        foo: T; // ok
    }
    
    class D2<T extends U, U> extends C3<U> {
        [x: string]: U;
        foo: T; // ok
    }
    
    class D3<T extends U, U> extends C3<T> {
        [x: string]: T;
        foo: U; // error
        ~~~
!!! error TS2416: Class member of type 'U' is not assignable to base class member of type 'T'.
        ~~~~~~~
!!! error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'T'.
    }
    
    class D4<T extends U, U> extends C3<U> {
        [x: string]: U;
        foo: U; // ok
    }
    
    
    // V > U > T
    // test if T is subtype of T, U, V
    // should all work
    class D5<T extends U, U extends V, V> extends C3<T> {
        [x: string]: T;
        foo: T; // ok
    }
    
    class D6<T extends U, U extends V, V> extends C3<U> {
        [x: string]: U;
        foo: T;
    }
    
    class D7<T extends U, U extends V, V> extends C3<V> {
        [x: string]: V;
        foo: T; // ok
    }
    
    // test if U is a subtype of T, U, V
    // only a subtype of V and itself
    class D8<T extends U, U extends V, V> extends C3<T> {
        [x: string]: T;
        foo: U; // error
        ~~~
!!! error TS2416: Class member of type 'U' is not assignable to base class member of type 'T'.
!!! error TS2416:   Type 'V' is not assignable to type 'T'.
        ~~~~~~~
!!! error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'T'.
    }
    
    class D9<T extends U, U extends V, V> extends C3<U> {
        [x: string]: U;
        foo: U; // ok
    }
    
    class D10<T extends U, U extends V, V> extends C3<V> {
        [x: string]: V;
        foo: U; // ok
    }
    
    // test if V is a subtype of T, U, V
    // only a subtype of itself
    class D11<T extends U, U extends V, V> extends C3<T> {
        [x: string]: T;
        foo: V; // error
        ~~~
!!! error TS2416: Class member of type 'V' is not assignable to base class member of type 'T'.
        ~~~~~~~
!!! error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'T'.
    }
    
    class D12<T extends U, U extends V, V> extends C3<U> {
        [x: string]: U;
        foo: V; // error
        ~~~
!!! error TS2416: Class member of type 'V' is not assignable to base class member of type 'U'.
        ~~~~~~~
!!! error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'U'.
    }
    
    class D13<T extends U, U extends V, V> extends C3<V> {
        [x: string]: V;
        foo: V; // ok
    }
    
    // Date > V > U > T
    // test if T is subtype of T, U, V, Date
    // should all work
    class D14<T extends U, U extends V, V extends Date> extends C3<Date> {
        [x: string]: Date;
        foo: T; // ok
    }
    
    class D15<T extends U, U extends V, V extends Date> extends C3<T> {
        [x: string]: T;
        foo: T; // ok
    }
    
    class D16<T extends U, U extends V, V extends Date> extends C3<U> {
        [x: string]: U;
        foo: T;
    }
    
    class D17<T extends U, U extends V, V extends Date> extends C3<V> {
        [x: string]: V;
        foo: T;
    }
    
    // test if U is a subtype of T, U, V, Date
    // only a subtype of V, Date and itself
    class D18<T extends U, U extends V, V extends Date> extends C3<Date> {
        [x: string]: Date;
        foo: T; // ok
    }
    
    class D19<T extends U, U extends V, V extends Date> extends C3<T> {
        [x: string]: T;
        foo: U; // error
        ~~~
!!! error TS2416: Class member of type 'U' is not assignable to base class member of type 'T'.
!!! error TS2416:   Type 'V' is not assignable to type 'T'.
!!! error TS2416:     Type 'Date' is not assignable to type 'T'.
        ~~~~~~~
!!! error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'T'.
    }
    
    class D20<T extends U, U extends V, V extends Date> extends C3<U> {
        [x: string]: U;
        foo: U; // ok
    }
    
    class D21<T extends U, U extends V, V extends Date> extends C3<V> {
        [x: string]: V;
        foo: U;
    }
    
    // test if V is a subtype of T, U, V, Date
    // only a subtype of itself and Date
    class D22<T extends U, U extends V, V extends Date> extends C3<Date> {
        [x: string]: Date;
        foo: T; // ok
    }
    
    class D23<T extends U, U extends V, V extends Date> extends C3<T> {
        [x: string]: T;
        foo: V; // error
        ~~~
!!! error TS2416: Class member of type 'V' is not assignable to base class member of type 'T'.
!!! error TS2416:   Type 'Date' is not assignable to type 'T'.
        ~~~~~~~
!!! error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'T'.
    }
    
    class D24<T extends U, U extends V, V extends Date> extends C3<U> {
        [x: string]: U;
        foo: V; // error
        ~~~
!!! error TS2416: Class member of type 'V' is not assignable to base class member of type 'U'.
!!! error TS2416:   Type 'Date' is not assignable to type 'U'.
        ~~~~~~~
!!! error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'U'.
    }
    
    class D25<T extends U, U extends V, V extends Date> extends C3<V> {
        [x: string]: V;
        foo: V; // ok
    }
    
    // test if Date is a subtype of T, U, V, Date
    // only a subtype of itself
    class D26<T extends U, U extends V, V extends Date> extends C3<Date> {
        [x: string]: Date;
        foo: Date; // ok
    }
    
    class D27<T extends U, U extends V, V extends Date> extends C3<T> {
        [x: string]: T;
        foo: Date; // error
        ~~~
!!! error TS2416: Class member of type 'Date' is not assignable to base class member of type 'T'.
        ~~~~~~~~~~
!!! error TS2411: Property 'foo' of type 'Date' is not assignable to string index type 'T'.
    }
    
    class D28<T extends U, U extends V, V extends Date> extends C3<U> {
        [x: string]: U;
        foo: Date; // error
        ~~~
!!! error TS2416: Class member of type 'Date' is not assignable to base class member of type 'U'.
        ~~~~~~~~~~
!!! error TS2411: Property 'foo' of type 'Date' is not assignable to string index type 'U'.
    }
    
    class D29<T extends U, U extends V, V extends Date> extends C3<V> {
        [x: string]: V;
        foo: Date; // error
        ~~~
!!! error TS2416: Class member of type 'Date' is not assignable to base class member of type 'V'.
        ~~~~~~~~~~
!!! error TS2411: Property 'foo' of type 'Date' is not assignable to string index type 'V'.
    }